<resources>
    <string name="app_name">FinalProject</string>
    <string name="hey_search_your_movie_here">Hey ! Search Your Movie Here :</string>
    <string name="title_the_avengers">Title:The Avengers</string>
    <string name="search_now">Search Now !</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="offline_movies">Offline Movies</string>
    <string name="see_more">See More</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="episode">Episode</string>
    <string name="plot">Plot :</string>
</resources>